# codex-in-claude

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  README.md  pyproject.toml
.agents/skills/agent-bot-identity/: SKILL.md
.agents/skills/agent-bot-identity/agents/: openai.yaml
.agents/skills/agent-bot-identity/scripts/: as-me  bot-env  bot-env-hook.sh  bot-token  git-credential-bot  session-env.sh
.agents/skills/agent-bot-identity/tests/: scenarios.md
.agents/skills/prek/: SKILL.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: agent-bot-identity  agent-friendly-github  agent-friendly-mcp
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: changelog-section.sh
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish.yml  test.yml
commands/codex/: delegate-async.md
docs/: REFERENCE.md  RELEASING.md  UPGRADING-CODEX.md
docs/superpowers/plans/: 2026-06-18-release-automation.md  2026-06-22-codex-model-catalog.md  2026-06-27-error-envelope-and-catalog-shrink.md
docs/superpowers/specs/: 2026-06-18-release-automation-design.md  2026-06-27-error-envelope-and-catalog-shrink-design.md
scripts/: check_codex_contract.py  check_github_actions_pinning.py
skills/collaborating-with-codex/: SKILL.md
src/codex_in_claude/: _worker.py  cli_contract.py  codex.py  codex_models.py  config.py  delegate.py  errors.py  obs.py  orchestration.py  prompts.py  rate_limit.py  schemas.py  server.py
src/codex_in_claude/_core/: gitdiff.py  idempotency.py  jobs.py  jsoncache.py  redaction.py  runtime.py  streamcap.py  worktree.py
tests/: test_check_codex_contract.py  test_check_github_actions_pinning.py  test_cli_contract.py  test_codex.py  test_codex_models.py  test_config.py  test_coverage_extra.py  test_delegate.py  test_errors.py  test_gitdiff.py  test_idempotency.py  test_integration.py  test_jobs.py  test_jsoncache.py  test_manifest.py  test_obs.py  test_orchestration.py  test_packaging.py  test_rate_limit.py  test_redaction.py  test_runtime.py  test_schemas.py  test_server.py  test_streamcap.py  test_worker.py  test_worktree.py
tests/fixtures/: manifest_snapshot.json
